--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,14 @@ nav a:hover {
 .hero {
   text-align: center;
   padding: 2rem 2rem 1rem 2rem;
-  background-image: url('background.png');
+  background-image: url('background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   color: #fff;
 }
+
+
 
 .hero h1 {
   font-size: 2.5rem;
